Fix issue with cell input fields having rounded borders on iOS Safari

--- a/app.css
+++ b/app.css
@@ -25,6 +25,9 @@
 .grid > .cell {
   background-color: #fff;
 }
+.grid > input.cell {
+  border-radius: 0;
+}
 
 .footer {
   padding: 1rem;
